Added new /log endpoint + refactored /activity
