# services/actionindex/internal/openapi.go
@@ -27,6 +27,7 @@ func InitOpenAPI(version string) error {
 var registeredRoutes = map[string][]string{
 	"/v1/history/get_actions":     {"GET", "POST"},
 	"/account/{account}/activity": {"GET"},
+	"/account/{account}/log":      {"GET"},
 	"/account/{account}/stats":    {"GET"},
 }
 
